# tauri-egui

./: Cargo.toml
