[package]
name = "tauri-egui"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://tauri.app"
categories = ["gui", "tauri"]
description = "A Tauri plugin for the egui library"

[dependencies]
thiserror = "1"
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05" }
tauri-runtime = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05" }
tauri-runtime-wry = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05" }
egui = "0.22"
eframe = { package = "eframe_tao", git = "https://github.com/Shays-Forks/egui" }
egui-winit = { package = "egui-tao", git = "https://github.com/Shays-Forks/egui" }
egui_glow = { package = "egui_glow_tao", git = "https://github.com/Shays-Forks/egui" }
glutin_tao = { package = "glutin_tao", git = "https://github.com/tauri-apps/glutin" }
glutin = { version = "0.30" }
glow = "0.12"
rand = "0.8"
raw-window-handle = "0.5"
tao = "0.19"
log = "0.4"

[dev-dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05" }
egui_demo_app = { path = "examples/egui_demo_app" }

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
gtk = { version = "0.16", features = ["v3_24"] }

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[workspace]
members = ["examples/egui_demo_app"]
